include/plasma_s.h

int PLASMA_sgesv(int N, int NRHS, float *A, int LDA, int *IPIV, float *B, int LDB);
int PLASMA_sgesv_incpiv(int N, int NRHS, float *A, int LDA, PLASMA_desc *descL, int *IPIV, float *B, int LDB);
int PLASMA_sgesvd(PLASMA_enum jobu, PLASMA_enum jobvt, int M, int N, float *A, int LDA, float *S, PLASMA_desc *descT, float *U, int LDU, float *VT, int LDVT);
int PLASMA_sgesdd(PLASMA_enum jobu, PLASMA_enum jobvt, int M, int N, float *A, int LDA, float *S, PLASMA_desc *descT, float *U, int LDU, float *VT, int LDVT);
int PLASMA_sgetrf(  int M, int N, float *A, int LDA, int *IPIV);
int PLASMA_sgetrf_incpiv(int M, int N, float *A, int LDA, PLASMA_desc *descL, int *IPIV);
int PLASMA_sgetrf_nopiv( int M, int N, float *A, int LDA);
int PLASMA_sgetrf_tntpiv(int M, int N, float *A, int LDA, int *IPIV);
int PLASMA_sgetri(int N, float *A, int LDA, int *IPIV);
int PLASMA_sgetrs(PLASMA_enum trans, int N, int NRHS, float *A, int LDA, const int *IPIV, float *B, int LDB);
int PLASMA_sgetrs_incpiv(PLASMA_enum trans, int N, int NRHS, float *A, int LDA, PLASMA_desc *descL, const int *IPIV, float *B, int LDB);
int PLASMA_ssyev(PLASMA_enum jobz, PLASMA_enum uplo, int N, float *A, int LDA, float *W, PLASMA_desc *descT, float *Q, int LDQ);
int PLASMA_ssyevd(PLASMA_enum jobz, PLASMA_enum uplo, int N, float *A, int LDA, float *W, PLASMA_desc *descT, float *Q, int LDQ);
int PLASMA_ssyevr(PLASMA_enum jobz, PLASMA_enum range, PLASMA_enum uplo, int N, float *A, int LDA, float vl, float vu, int il, int iu, float abstol, int *nbcomputedeig, float *W, PLASMA_desc *descT, float *Q, int LDQ);
int PLASMA_ssygv(PLASMA_enum itype, PLASMA_enum jobz, PLASMA_enum uplo, int N, float *A, int LDA, float *B, int LDB, float *W, PLASMA_desc *descT, float *Q, int LDQ);
int PLASMA_ssygst(PLASMA_enum itype, PLASMA_enum uplo, int N, float *A, int LDA, float *B, int LDB);
int PLASMA_sgetmi(int m, int n, float *A, PLASMA_enum fin, int mb, int nb);
int PLASMA_sgetmi_Async(int m, int n, float *A, PLASMA_enum f_in, int mb, int inb, PLASMA_sequence *sequence, PLASMA_request *request);